force-app/main/default/objects/Functional_Queue_Member__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <formula>TRIM(Contact_Member__r.FirstName &amp; &quot; &quot; &amp; Contact_Member__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>