force-app/main/default/objects/Functional_Queue_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSIP BI Submitter</fullName>
            </value>
            <value>
                <fullName>PSIP COR</fullName>
            </value>
            <value>
                <fullName>PSIP PSS</fullName>
            </value>
            <value>
                <fullName>PSIP PERSEC Management</fullName>
            </value>
            <value>
                <fullName>PSIP Read Only</fullName>
            </value>
            <value>
                <fullName>Default Role</fullName>
                <isActive>false</isActive>
                <label>Default Role</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>