force-app/main/default/objects/Functional_Queue_Member__c/fields/User_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>User_Is_Active__c</fullName>
    <description>Show the active status of the User record linked to the Contact Member</description>
    <formula>Contact_Member__r.User_ID__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Is Active</label>
    <type>Checkbox</type>
</CustomField>