force-app/main/default/objects/Functional_Queue_Member__c/recordTypes/Functional_Queue_Member_Default.recordType-meta.xml
<RecordType>
    <fullName>Functional_Queue_Member_Default</fullName>
    <active>true</active>
    <description>Default record type for Functional Queue Member</description>
    <label>Functional Queue Member Default</label>
</RecordType>