force-app/main/default/objects/Functional_Queue_Member__c/recordTypes/PSIP_Functional_Queue_Member.recordType-meta.xml
<RecordType>
    <fullName>PSIP_Functional_Queue_Member</fullName>
    <active>true</active>
    <description>PSIP&apos;s dedicated record type for the Functoinal Queue Member object</description>
    <label>PSIP Functional Queue Member</label>
</RecordType>