force-app/main/default/objects/Functional_Queue_Member__c/validationRules/Cannot_Edit_Existing_Member.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Existing_Member</fullName>
    <active>true</active>
    <description>Instead of editing a Queue Member record and changing the corresponding contact, the user will have to delete the member and add the new one.</description>
    <errorConditionFormula>Not(ISNEW()) &amp;&amp; ISCHANGED(Contact_Member__c)</errorConditionFormula>
    <errorDisplayField>Contact_Member__c</errorDisplayField>
    <errorMessage>In order to change the functional queue member, you must delete this member and add the new one.</errorMessage>
</ValidationRule>